// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders correctly when className is set. 1`] = `
<div
  className="root home"
>
  <p
    className="title"
  >
    Hello 
    World
    !
  </p>
  <button
    onClick={[Function]}
  >
    Click: 0
  </button>
</div>
`;

exports[`App renders correctly. 1`] = `
<div
  className="root"
>
  <p
    className="title"
  >
    Hello 
    World
    !
  </p>
  <button
    onClick={[Function]}
  >
    Click: 0
  </button>
</div>
`;
